# Ouro

./: .gitignore  README.md  pyproject.toml  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-witty-grass-033444c10.yml  azure-static-web-apps.yml
docs/: ARCHITECTURE.md  GAME_DESIGN.md
ouro/: __init__.py  __main__.py  app.py
ouro/data/: __init__.py  archetypes.py  ascension_upgrades.py  balance.py  curses.py  lore.py  skins.py  upgrades.py
ouro/engine/: __init__.py  economy.py  events.py  game_state.py  meta.py  prestige.py  procedural.py  rhythm.py  save.py
ouro/ui/: __init__.py  ascension_screen.py  collections.py  event_overlay.py  hud.py  prestige_screen.py  rhythm_indicator.py  snake_display.py  styles.tcss  upgrade_panel.py
ouro/web/: __init__.py  __main__.py  server.py
ouro/web/static/: engine.js  game.js  index.html  style.css
ouro/web/templates/: game.html
scripts/: build.sh
tests/: test_economy.py  test_prestige.py  test_rhythm.py  test_synergies.py
