[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouro"
version = "0.1.0"
description = "Ouro — A roguelike incremental TUI game inspired by the ouroboros"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "textual-dev>=1.0",
]

[project.scripts]
ouro = "ouro.__main__:main"
ouro-web = "ouro.web.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ouro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
