[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouro"
version = "0.1.0"
description = "Ouro — A roguelike incremental web game inspired by the ouroboros"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
ouro-web = "ouro.web.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ouro"]

